src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Level_of_Interest_in_APM__c</fullName>
        <label>Level of Interest in APM</label>
        <picklist>
            <picklistValues>
                <fullName>Low: Gathering info only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate: May consider APM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High: Starting APM project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urgent: Want to buy APM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Companies_Followed__c</fullName>
        <label>LinkedIn Companies Followed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Group_Memberships__c</fullName>
        <label>LinkedIn Group Memberships</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Public_User_Profile__c</fullName>
        <label>LinkedIn Public User Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lite_Download_Time_Stamp__c</fullName>
        <label>Lite Download Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lite_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lite User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maintenance_End_Time__c</fullName>
        <label>Maintenance End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Maintenance_Short_Name__c</fullName>
        <label>Maintenance Short Name</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Start_Time__c</fullName>
        <label>Maintenance Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Maintenance_Type__c</fullName>
        <label>Maintenance Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_Held__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Meeting Held</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_Schedule_Date__c</fullName>
        <label>Meeting Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_to_be_held_by__c</fullName>
        <label>Meeting to be held by</label>
        <picklist>
            <picklistValues>
                <fullName>Garth Adlao</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pete Abrams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Randy Boysen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joel Fortune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jerry Nelson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tom Reksten</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NET_Lite_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>.NET Lite User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NS_Sync__c</fullName>
        <label>NetSuite Sync</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Needs_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field to check if the contact needs license emails.</description>
        <label>Needs Email?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NetSuite_Id__c</fullName>
        <label>NetSuite Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetSuite_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NetSuite Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NetSuite_Mapping__c</fullName>
        <label>NetSuite Mapping</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetSuite_Pull__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NetSuite Pull</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NetSuite_Push__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NetSuite Push</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Sales_Territory__c</fullName>
        <label>New Sales Territory</label>
        <picklist>
            <picklistValues>
                <fullName>Central West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Atlantic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West South</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Newsletter__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Denotes the contact will receive our newsletter</description>
        <inlineHelpText>Uncheck the box if contact does not want to receive.</inlineHelpText>
        <label>Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_longer_at_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No longer at Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Note_to_Sales__c</fullName>
        <label>Note to Sales</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nurture_Timeout_Formula__c</fullName>
        <description>Used by Full Circle to determine how to set a date stamp in the Nurture Timeout field if criteria is met.</description>
        <formula>CASE( Withdraw_Reason__c ,
&quot;Competitor&quot;,3650,
&quot;AppDynamics Employee&quot;,3650,
&quot;Partner Employee&quot;,3650,
&quot;No Longer with Company&quot;,3650,
&quot;SPAMmy data&quot;,3650,
&quot;Not suitable for AppDynamics sale&quot;,3650,
&quot;Ops Cleaning&quot;,0,
&quot;Existing Competitive Solution Installed&quot;,90,
&quot;No Immediate Need&quot;,90,
&quot;Couldn&apos;t Connect&quot;,30,
&quot;Inaccurate Contact Info&quot;,30,
&quot;Existing AppD Customer&quot;,90,
&quot;Not a Technology Fit&quot;,90,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used by Full Circle to determine how to set a date stamp in the Nurture Timeout field if criteria is met.</inlineHelpText>
        <label>Nurture Timeout Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Origin_LP__c</fullName>
        <label>Origin LP</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Origin_Source_Detail__c</fullName>
        <label>Origin Source Detail</label>
        <picklist>
            <picklistValues>
                <fullName>30-Day Trial Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-Day Trial - Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD Direct Download</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD Google Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApacheCon 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApacheCon 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppDynamics Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppJam NYC 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppJam Paris 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppJam Road Show Chicago 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppJam Road Show Dallas 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppJam Road Show DC 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppJam Road Show Frankfurt 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppJam Road Show London 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppJam Road Show Newport Beach 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppJam Road Show SF 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWS re:Invent 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWS Summit NYC 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basta! .NET 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BbWorld 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BbWorld 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta .Net User Group 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue Chew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMC Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMC Trial Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camp IT 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalysts Developer Contest 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ceCMG Conference 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Iowa Software Symposium (NFJS) 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIO Executive Summit Boston 2013</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Origin_Source_Type__c</fullName>
        <label>Origin Source Type</label>
        <picklist>
            <picklistValues>
                <fullName>Asset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Original_Response_Keyword__c</fullName>
        <label>Original Response Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Response_Vendor__c</fullName>
        <label>Original Response Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Lead_Source_Lite_Downloader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Lead Source Lite Downloader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Correct__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Darryl and Brett when setting the correct ownership to stabilize production. Can be removed following this process (3/30/2015)</description>
        <label>Owner Correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Page_Visit_Time_Stamp__c</fullName>
        <label>Page Visit Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Roles__c</fullName>
        <description>This is a field to track one or multiple roles for this partner contact.</description>
        <inlineHelpText>Please select one or more roles for this contact.</inlineHelpText>
        <label>Partner Contact Roles</label>
        <picklist>
            <picklistValues>
                <fullName>Billing Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Person</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Support Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FEZ User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Contact</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Partner_ID__c</fullName>
        <label>Partner ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_URL_Parameter__c</fullName>
        <label>Partner URL Parameter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Username__c</fullName>
        <label>Partner Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <picklist>
            <picklistValues>
                <fullName>AGSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apica Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CloudBees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloudops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datavail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominion Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grid Robotics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Source Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J9Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keynote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kuali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MXI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newton Technology Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NTT Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OpSource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prelert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RightScale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scicom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOASTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Splunk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PortalID__c</fullName>
        <label>PortalID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Engagement_Score__c</fullName>
        <label>Product Engagement Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Request_Notes__c</fullName>
        <description>This field is used to sync the data in zendesk agains the customer&apos;s profile.  Added on behalf of Vikash as requested by Hatim</description>
        <inlineHelpText>Please enter details of customer request for product enhancements and features</inlineHelpText>
        <label>Product Request Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Profile_Score_Tier__c</fullName>
        <formula>IF(infer2__Infer_Score__c&gt;=84,&apos;A&apos;, 
IF(infer2__Infer_Score__c&gt;=60,&apos;B&apos;, 
IF(infer2__Infer_Score__c&gt;=42,&apos;C&apos;, 
IF(infer2__Infer_Score__c&lt;42,&apos;D&apos;,&apos; &apos; 
))))</formula>
        <label>Profile Score Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMKRViewCentral__VCRegistrantID__c</fullName>
        <externalId>true</externalId>
        <label>VCRegistrant ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Reason_Assigned__c</fullName>
        <label>Reason Assigned</label>
        <picklist>
            <picklistValues>
                <fullName>1- 60 pts w/ phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1- Campaign Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1- Drip Campaign Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1- Lite w/ phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1- TradeShow Click</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1- Webpage visit w phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2- Campaign Clicks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2- TradeShow Opens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3- 60 pts w/o phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3- Lite w/o phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3- Webpage visit w/o phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recent_Page_Visit_Times__c</fullName>
        <label>Recent Page Visit Times</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recent_Querystrings__c</fullName>
        <label>Recent Querystrings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recent_Search_Phrases__c</fullName>
        <label>Recent Search Phrases</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recent_Web_Pages__c</fullName>
        <label>Recent Web Pages</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referral_Primary_Practice_Leader_Email__c</fullName>
        <label>Referral Primary Practice Leader Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referral_Registration_Date__c</fullName>
        <label>Referral Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <label>Referral</label>
        <picklist>
            <picklistValues>
                <fullName>Sourceforge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dzone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stackoverflow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Javaranch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Techtarget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InfoQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JavaPerformanceTuning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Search</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referrer_Company__c</fullName>
        <label>Referrer Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Email_Address__c</fullName>
        <label>Referrer Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referrer_Full_Name__c</fullName>
        <label>Referrer Full Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Phone_Number__c</fullName>
        <label>Referrer Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Registered_Fan_Club__c</fullName>
        <label>Registered Fan Club</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reports_To_del__c</fullName>
        <label>Reports To</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Detail__c</fullName>
        <label>Response Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Keyword__c</fullName>
        <label>Response Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_LP__c</fullName>
        <label>Response LP</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Response_Type__c</fullName>
        <label>Response Type</label>
        <picklist>
            <picklistValues>
                <fullName>Asset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response_Vendor__c</fullName>
        <label>Response Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEO_Campaign_Name_Original__c</fullName>
        <label>SEO Campaign Name Original</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEO_Campaign_Name__c</fullName>
        <label>SEO Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEO_CreativeID_Original__c</fullName>
        <label>SEO CreativeID Original</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEO_CreativeID__c</fullName>
        <label>SEO CreativeID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEO_Keyword_Original__c</fullName>
        <label>SEO Keyword Original</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEO_Keyword__c</fullName>
        <label>SEO Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEO_Landing_Page_Original__c</fullName>
        <label>SEO Landing Page Original</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEO_Landing_Page__c</fullName>
        <description>This field needs to store the URL of our Landing Page and will also help with sanity checks of our tagging (e.g. “source” is not matching the related tagged url =&gt; tracking is not working correctly).</description>
        <label>SEO Landing Page</label>
        <length>10024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SEO_Lead_Source_Original__c</fullName>
        <label>SEO Lead Source Original</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEO_Lead_Source__c</fullName>
        <label>SEO Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEO_Medium_Original__c</fullName>
        <label>SEO Medium Original</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEO_Medium__c</fullName>
        <label>SEO Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <formula>Account.DandbCompany.PrimarySic</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data.com SIC Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Increment_Counter__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Score Increment Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Self_Service_Pro_Trial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self-Service Pro Trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Self_Service_Product__c</fullName>
        <label>Self-Service Product</label>
        <picklist>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>.NET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Node.js</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Partner_Activation_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Partner Activation Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <picklist>
            <picklistValues>
                <fullName>Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Gov.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trade_Show_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trade Show Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trade_Show_Name__c</fullName>
        <label>Trade Show Name</label>
        <picklist>
            <picklistValues>
                <fullName>ApacheCon 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BbWorld 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud Connect 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud Connect 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud Connect 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DevConnections (.NET) 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DevConnections 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOSE 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gartner Data Conf 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JavaOne 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JAX London 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JAX SJ 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jazoon Zurich, Switzerland 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JBoss 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JBoss 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Tech ed (.NET) 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QCon 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qcon 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Server Side Symposium 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer Jax 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Velocity 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Velocity 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Velocity 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Velocity Europe 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VisualStudioLive 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VMWorld 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W-Jax 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W-JAX 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VSLive 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft TechEd 2012</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Trade_Show_or_User_Group__c</fullName>
        <label>Trade Show or User Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>